@@ -1,7 +1,9 @@
 0.18 "" (released xx.xx.xxxx)
 
 * Fixed unadf archive listing.
-* Added support for Python 3.x and depend on Python >= 2.7.
+* Added support for Python 3.x.
+* Use importlib to find program modules and depend on Python >= 2.7.
+* Added support for archmage handling CHM (.chm) archives.
 
 
 0.17 "I am Bruce Lee" (released 4.8.2012)
